# cue

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
cue/: __init__.py  __main__.py  cli.py  config.py
cue/agents/: __init__.py  store.py
cue/agents/builtins/: auto.toml  coding.toml  custom.toml  email.toml  interview-behavioral.toml  interview-coding.toml  interview-system-design.toml  interview.toml  math.toml  meeting-notetaker.toml  meeting.toml  research.toml  sales-discovery.toml  sales.toml  writing.toml
cue/daemon/: __init__.py  api.py  server.py
cue/providers/: __init__.py  base.py  ollama.py  openrouter.py  router.py
cue/stt/: __init__.py  base.py  whisper.py
cue/tts/: __init__.py  base.py  coqui.py
electron/: extract-helpers.js  kb-engine.js  main.js  package-lock.json  package.json  preload.js
electron/renderer/: agents.js  app.js  chat-store.js  index.html  kb-store.js  ollama.js  resume.js  styles.css
landing/: index.html
tests/: test_chat_e2e.py  test_openrouter_chat_models.py
