[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cue"
version = "0.1.0"
description = "Open-source meeting assistant. Whispers smart, runs local. Cluely-class overlay, your model, your data."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Suryanand Sunil", email = "work@suryanand.com" }]
keywords = [
  "ai", "interview", "meetings", "stt", "tts", "openrouter", "ollama",
  "whisper", "coqui", "agent", "rag", "cluely", "overlay", "voice", "assistant",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "textual>=0.80",
  "pydantic>=2.7",
  "tomli-w>=1.0",
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
stt = [
  "transformers>=4.43",
  "torch>=2.3",
  "torchaudio>=2.3",
  "silero-vad>=5.1",
  "librosa>=0.10",
  "soundfile>=0.12",
]
tts = [
  "TTS>=0.22",
]
kb = [
  "lancedb>=0.10",
  "tantivy>=0.22",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "openpyxl>=3.1",
]
all = ["cue[stt,tts,kb]"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "respx>=0.21",
]

[project.scripts]
cue = "cue.cli:cli"

[project.urls]
Homepage = "https://cue.valthrax.com"
Repository = "https://github.com/Suryanandx/cue"
Issues = "https://github.com/Suryanandx/cue/issues"
Studio = "https://valthrax.com"

[tool.hatch.build.targets.wheel]
packages = ["cue"]

[tool.hatch.build.targets.wheel.force-include]
"cue/agents/builtins" = "cue/agents/builtins"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
